:wrench: fixing content overflow

--- a/src/components/Page/Page.module.scss
+++ b/src/components/Page/Page.module.scss
@@ -1,5 +1,5 @@
 .container {
-  height: 100%;
+  min-height: 100%;
   display: grid;
   grid-template-areas: "header" "main" "footer";
   grid-template-rows: auto 1fr auto;
